--- a/resolution.tex
+++ b/resolution.tex
@@ -28,9 +28,9 @@ This paper describes...
 
 \section{Introduction}
 
-An increasing number of Atmospheric General Circulation Models (AGCMs) are being developed to maximize efficiency on massively parallel systems, permitting regionally-refined high-resolution, or even globally high-resolution weather ($\Delta x \leq 5$ km) and climate ($\Delta x \leq 50$ km) simulations \citep{SMTMN2008JCP,MPASatm,Z2014QJRMS,HETAL2016JCLIM,DCMIP16,LetAl2018JAMES}. These models are built using unstructured meshes that allows for substantial grid flexibility, this newfound freedom is restrained by the need for physical parameterizations ({\em{physics}}) that behave consistently as the truncation scale of the model changes with different grid resolutions, referred to as scale-aware physics. The most common approach towards developing scale-aware physics is through the lens of limited area, large-eddy simulations \citep[e.g.,][]{PC2008JAS,AW2013JAS,SZ2018JCLIM}. By subsequently filtering large-eddy solutions to lower-resolution grids, a relationship between first- and higher-order moments may be understood and ultimately parameterized as a function of grid resolution. While this approach is likely necessary for developing scale-aware physics, it is not sufficient. The equations of motions have inherent scale dependencies, and the properties of dynamical modes are a function of native grid resolution \citep{O1981JAS,WETAL1997MWR,PG2006JAS,JR2016QJRMS}. Scale-aware physics should also recognize these native grid dependencies.
+An increasing number of Atmospheric General Circulation Models (AGCMs) are being developed to maximize efficiency on massively parallel systems, permitting regionally-refined high-resolution, or even globally high-resolution weather ($\Delta x \leq 5$ km) and climate ($\Delta x \leq 50$ km) simulations \citep{SMTMN2008JCP,MPASatm,Z2014QJRMS,HETAL2016JCLIM,DCMIP16,LetAl2018JAMES}. These models are built using unstructured meshes that allows for substantial grid flexibility, but lack physical parameterizations ({\em{physics}}) which behave consistently as the truncation scale of the model changes with different grid resolutions, referred to as scale-aware physics. The most common approach towards developing scale-aware physics is through the lens of limited area, large-eddy simulations \citep[e.g.,][]{PC2008JAS,AW2013JAS,SZ2018JCLIM}. By subsequently filtering large-eddy solutions to lower-resolution grids, a relationship between first- and higher-order moments may be understood and ultimately parameterized as a function of grid resolution. While this approach is likely necessary for developing scale-aware physics, it is not sufficient. The equations of motions have inherent scale dependencies, and the properties of dynamical modes are a function of native grid resolution \citep{O1981JAS,WETAL1997MWR,PG2006JAS,JR2016QJRMS}. Scale-aware physics should also recognize these native grid dependencies.
 
-The sensitivity of the Community Atmosphere Model \citep[CAM;][]{CAM5}, and its predecessor, the Community Climate Model (CCM) to resolution ({\em{resolution}} refers to {\em{horizontal resolution}}, hereafter) is well documented through convergence studies \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}. CAM/CCM is a fully supported, well-funded climate model, but despite thirty years of continual model development, there are robust sensitivities to resolution that have persisted in all versions of the model. This study argues that a unifying cause, the inherent scale sensitivities of the underlying dynamical equations, can explain the robust responses to resolution that occur in CAM/CCM. {\color{red}{Establishing a complete understanding of resolution sensitivity in CAM/CCM and AGCMs alike is crucial, since it is difficult to conceive that inevitable responses to native grid resolution could be ignored in the pursuit of scale-aware physics.}}
+The sensitivity of the Community Atmosphere Model \citep[CAM;][]{CAM5}, and its predecessor, the Community Climate Model (CCM) to resolution ({\em{resolution}} refers to {\em{horizontal resolution}}, hereafter) is well documented through convergence studies \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}. CAM/CCM is a fully supported, well-funded climate model, but despite thirty years of continual model development, there are robust sensitivities to resolution that have persisted in all versions of the model. This study argues that a unifying cause, the inherent scale sensitivities of the underlying dynamical equations, can explain the robust responses to resolution that occur in CAM/CCM. {\color{red}{Establishing a complete understanding of resolution sensitivity in CAM/CCM and AGCMs alike is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of scale-aware physics.}}
 
 In CAM/CCM, the atmosphere progressively dries with increasing resolution, seen through a reduction in simulated total precipitable water \citep{KW1991JGR,WETAL1995CD,W2008TELLUS,RETAL2013JCLIM,ZetAl2014JCb,HR2017JCLIM}, which typically, but not always \citep[see][]{WETAL1995CD,ZetAl2014JCb}, coincides with a reduction in cloud cover. \cite{KW1991JGR} and \cite{WETAL1995CD} suggested that the drying of the atmosphere is due to greater magnitude resolved vertical velocities with increasing resolution, with greater subsiding motion increasing the export of dry air from the upper troposphere. This mechanism is consistent with an analysis of moisture budgets in CAM, version 4 \citep[CAM4;][]{CAM4} across multiple resolutions \citep{YETAL2014JCLIM,HR2017JCLIM}.
 
@@ -42,7 +42,7 @@ where $n$ is the power law exponent.
 
 \cite{RETAL2016CD} derive an estimate $n= h-1$ in equation~\ref{eq:alpha} by combining a scale analysis of the continuity equation with a power law representation $\Delta x^{2h}$ of the second-order structure function of the horizontal wind. Strictly speaking, $\Delta x$ here refers to the distance between two points for which the velocity increment is computed in the structure function, but with this distance set to the model grid-spacing. Regional models analyzed in \cite{RETAL2016CD} provide evidence for $h<1$, implying $n<0$ and consistent with the increase in $W$ with resolution in models.
 
-Observations show that $h=\frac{1}{3}$ for scales less than about $1000$ km \citep[hereafter referred to as the {\em{mesoscale}};][]{L1999JFM,CL2001JGR}. This value for $h$ is also supported by the slope of the kinetic energy spectrum $\beta$, which can be related to the second-order structure function through the Weiner–Khinchine theorem, $\beta = - \left( 2h+1 \right)$, valid for the range $0<h<1$ \citep{DETAL1996JAS}. For $h=\frac{1}{3}$, $\beta=-\frac{5}{3}$, which is true for the kinetic energy spectrum in observations \citep{NG1985JAS,CETAL1999JGR} and models \citep[e.g.,][]{THO2006GRL,SPKS2014JAS} at the mesoscale. \cite{RETAL2016CD} proposed that the robust support for $h=\frac{1}{3}$ at the mesoscale provides an emergent constraint for $n=-\frac{2}{3}$ in equation~\ref{eq:alpha}.
+Observations show that $h=\frac{1}{3}$ for scales less than about $100$ km \citep[hereafter referred to as the {\em{mesoscale}};][]{L1999JFM,CL2001JGR}. This value for $h$ is also supported by the slope of the kinetic energy spectrum $-\beta$, which can be related to the second-order structure function through the Weiner–Khinchine theorem, $\beta = \left( 2h+1 \right)$, valid in the range $1<\beta<3$ \citep[satisfies stationarity;][]{DETAL1996JAS}. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is true for the kinetic energy spectrum in observations \citep{NG1985JAS,CETAL1999JGR} and models \citep[e.g.,][]{THO2006GRL,SPKS2014JAS} at the mesoscale. \cite{RETAL2016CD} proposed that the robust support for $h=\frac{1}{3}$ at the mesoscale provides an emergent constraint for $n=-\frac{2}{3}$ in equation~\ref{eq:alpha}.
 
 In large-eddy simulations, the sensitivity of vertical velocities to resolution is adequately explained by a scale analysis of the dynamical equations \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}. For hydrostatic scales relevant to AGCMs, a scale analysis of the Poisson equation gives $W \propto D^{-1}$, where $D$ is the horizontal scale of buoyancy perturbations driving vertical motion \citep{HR2018JAMES}. In CAM aqua-planet simulations, the largest source of buoyancy is from stratifrom cloud formation, which are grid-limited with horizontal scales set by the effective resolution of the model \citep[i.e., some multiple of $\Delta x$;][]{S2011LNCSE}, indicating $n=-1$ in equation~\ref{eq:alpha} \citep{HR2018JAMES}. \cite{HR2017JCLIM} has shown that the $n=-1$ scaling does not explain the behavior of CAM4 in a convergence experiment, but follow-up studies \citep{HR2018JAMES,HETAL2019JAMES} indicate that the inadequacy of the $n=-1$ scaling is not definitive, due to large time-truncation errors associated with fixing the physics time-step ($\Delta t_{phys}$) across resolutions in that study.
 
@@ -220,7 +220,7 @@ To isolate the relative importance of temperature or moisture on the systematic 
 
 \subsubsection{Subtropics}
 
-Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right) $ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and their dilute CAPE  values vary much less with resolution ($\sim 20$ J/kg, compared with $\sim 80$ J/kg across all resolutions in the deep tropics). Through recomputing dilute CAPE and fixing the temperature or moisture profiles to $ne20$ values, the reduction in dilute CAPE with resolution is attributed to both temperature and moisture, but with temperature changes playing a larger role (not shown).
+Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temperature and moisture of subsiding and ascending regions in the $\pm \left( 10^{\circ}-30^{\circ} \right) $ latitude bands, hereafter referred to as the subtropics. The spread in dilute CAPE between ascending and descending grid columns is much smaller than for the deep tropics (Figure~\ref{fig:cape}a), and their dilute CAPE  values vary much less with resolution ($\sim 20$ J/kg, compared with $\sim 80$ J/kg across all resolutions in the deep tropics). Through recomputing dilute CAPE and fixing the temperature or moisture profiles to $ne20$ values, the reduction in dilute CAPE with resolution is attributed to both temperature and moisture, but with temperature changes playing a larger role (not shown). The increase in subsidence with resolution is likely responsible for the reduction in $FREQZM$ with resolution in the subtropics (Figures~\ref{fig:4zonal}a,b).
 
 \begin{figure}
 \begin{center}
@@ -230,7 +230,7 @@ Figure~\ref{fig:cape-subt}a shows the dilute CAPE values computed from mean temp
 \label{fig:cape-subt}
 \end{figure}
 
-The lack of spread in dilute CAPE between ascending/descending regions explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}a), since with no strong dependence of dilute CAPE on ascending/descending regimes, subsidence cannot be a skillful predictor of depressing dilute CAPE below the threshold for convection. There is also no significant changes to the occurrence of subsiding grid columns with resolution. The space-time weights of ascending/descending motion are more-or-less invariant with resolution (Figure~\ref{fig:cape-subt}b).
+The lack of spread in dilute CAPE between ascending/descending regions explains the declining skill in the logistic regression in the subtropics (Figure~\ref{fig:4zonal}a). Without a strong dependence of dilute CAPE on ascending/descending regimes, subsidence cannot be a skillful predictor of depressing dilute CAPE below the threshold for convection. There is also no significant changes to the occurrence of subsiding grid columns with resolution (Figure~\ref{fig:cape-subt}b); space-time weights of ascending/descending motion are more-or-less invariant with resolution.
 
 \begin{figure}
 \begin{center}
@@ -240,7 +240,7 @@ The lack of spread in dilute CAPE between ascending/descending regions explains 
 \label{fig:transect}
 \end{figure}
 
-To understand why dilute CAPE is so insensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the 800 hPa level in this region, which often occurs with appreciable subsiding motion aloft. Though properly a deep convection scheme, the ZM scheme is acting as a shallow convection scheme in this region. This shallow convection regime tends to produce light rain, or drizzle, which is a common bias in AGCMs \citep{D2006JCLIM}. Figure~\ref{fig:2zonal}a shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at $\sim$ 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution.
+To understand why dilute CAPE is less sensitive to subsidence in the subtropics, Figure~\ref{fig:transect} shows two snapshots of $\omega$ in the longitude-pressure plane at  $\sim 18^{\circ}$ latitude in the $ne30$ simulations, overlain by an isoline delineating where the ZM mass fluxes are quite active. The ZM mass fluxes typically only extend up to about the 800 hPa level in this region, which often occurs with appreciable subsiding motion aloft. Though properly a deep convection scheme, the ZM scheme is acting as a shallow convection scheme in this region. This shallow convection regime tends to produce light rain, or drizzle, which is a common bias in AGCMs \citep{D2006JCLIM}. Figure~\ref{fig:2zonal}a shows the fraction of ZM precipitation $\leq 5$ mm/day in the simulations, which stubbornly persists at $\sim$ 70\% in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands, irrespective of resolution.
 
 \begin{figure}
 \begin{center}
@@ -250,7 +250,7 @@ To understand why dilute CAPE is so insensitive to subsidence in the subtropics,
 \label{fig:2zonal}
 \end{figure}
 
-In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:2zonal}b), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and increasing subsidence (Figure~\ref{fig:4zonal}a), which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme is likely a result of these two opposing influences on CAPE, with large latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with subsidence restricting dilute CAPE from becoming much larger. This interpretation is supported by the logistic regression, which shows a local minimum in goodness-of-fit in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude region (Figure~\ref{fig:4zonal}c), indicating the elevated subsidence is not that skillful in depressing dilute CAPE below the threshold for convection.
+In the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude bands there are opposing influences on dilute CAPE; a global maximum in surface latent heat fluxes (Figure~\ref{fig:2zonal}b), influencing the thermodynamic state of boundary layer parcels and increasing dilute CAPE from below \citep{Z2002JGR}, and increasing subsidence (Figure~\ref{fig:4zonal}a), which opposes dilute CAPE from above. The shallow convection regime of the ZM scheme is likely a result of these two opposing influences on CAPE, with large latent heat fluxes increasing dilute CAPE just above the threshold for convection, but with subsidence restricting dilute CAPE from becoming much larger. This interpretation is supported by the logistic regression, which shows a local minimum in goodness-of-fit in the $\pm \left(10^{\circ}-20^{\circ} \right)$ latitude region (Figure~\ref{fig:4zonal}c), indicating the elevated subsidence is not very skillful in depressing dilute CAPE below the threshold for convection.
 
 \subsection{Vertical Velocities and Stratiform Precipitation}
 
@@ -258,9 +258,9 @@ In contrast to the impact of vertical motion on the ZM scheme, the stratiform sc
 \begin{equation}
 P_{tot} \approx -\frac{1}{g\rho_{w}} \omega^{cb}_u q^{cb}_u \label{eq:mflux}
 \end{equation}
-where $\omega^{cb}_u$ and $q^{cb}_u$ refers to $\omega$ and specific humidity $q$ for ascending motion at cloud base, respectively, with $g=9.80616$ m/s$^2$ the acceleration of gravity and $\rho_w=1000$ kg/m$^3$ the density of rainwater used in CAM. \cite{OETAL2016JAMES} deem this the ``what goes up, must go down" model, which highlights the physically intuitive nature of the scaling, but beware that other potentially important processes are ignored in the scaling, such as detrainment of cloudy updrafts into the environment or updrafts embedded within circulations with large gross moist stability.
+where $\omega^{cb}_u$ and $q^{cb}_u$ refers to $\omega$ and specific humidity $q$ for ascending motion at cloud base, respectively, with $g=9.80616$ m/s$^2$ the acceleration of gravity and $\rho_w=1000$ kg/m$^3$ the density of rainwater used in CAM. \cite{OETAL2016JAMES} deem this the ``what goes up, must go down" model, highlighting the physically intuitive nature of the scaling, but beware the scaling omits other potentially important processes, such as detrainment of cloudy updrafts into the environment or updrafts embedded within efficient circulations, containing high gross moist stabilities.
 
-Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to provide a good fit to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics, across multiple resolutions \citep{OETAL2016JAMES}. As noted by \cite{RETAL2016CD}, using only resolved quantities in equation~\ref{eq:mflux} omits the sub-grid scale contribution to moisture fluxes, and so it is instructive to analyze the relative skill of this approximation for the individual components of $P_{tot}$, being the sum of stratiform $P_s$ and parameterized convective $P_c$ precipitation rates. Figure~\ref{fig:mflux} shows the median $P_c$, $P_s$ and $P_{tot}$ conditioned on the $850$ hPa resolved moisture flux scaling using $1$ mm/day bins, in the CAM6 $ne30$ simulation. The figure shows that the moisture flux scaling is a good first-order approximation to the median total precipitation rate, and that the increase in precipitation rates with moisture flux is primarily from the stratiform precipitation scheme. The scaling is just as skillful for different resolutions \citep[not shown;][]{OETAL2016JAMES} and so changes to the global mean, climatological $P_s$ with resolution can be understood through quantifying changes in moisture fluxes with resolution.
+Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mflux} was found to provide a good fit to total precipitation rates in a regional model \citep{RETAL2016CD} and in the CAM-SE AGCM with CAM5 physics, across multiple resolutions \citep{OETAL2016JAMES}. As noted by \cite{RETAL2016CD}, using only resolved quantities in equation~\ref{eq:mflux} omits the sub-grid scale contribution to moisture fluxes, and so it is instructive to analyze the relative skill of this approximation for the individual components of $P_{tot}$, being the sum of stratiform $P_s$ and ZM convective $P_c$ precipitation rates. Figure~\ref{fig:mflux} shows the median $P_c$, $P_s$ and $P_{tot}$ conditioned on the $850$ hPa resolved moisture flux scaling using $1$ mm/day bins, in the CAM6 $ne30$ simulation. The figure shows that the moisture flux scaling is a good first-order approximation to the median total precipitation rate, and that the increase in precipitation rates with moisture flux is primarily from the stratiform precipitation scheme. The scaling is just as skillful for different resolutions \citep[not shown;][]{OETAL2016JAMES} and so changes to the global mean, climatological $P_s$ with resolution can be understood through quantifying changes in moisture fluxes with resolution.
 
 \begin{figure}
 \begin{center}
@@ -270,13 +270,13 @@ Through approximating the cloud base as the $850$ hPa level, equation~\ref{eq:mf
 \label{fig:mflux}
 \end{figure}
 
-To unravel the contributions of changes in $\omega$ and $q$ at the 850 hPa level $\omega_{850}$ and $q_{850}$, to the increase in global mean, climatological stratiform precipitation rates $\overline{P_s}$, $\overline{P_s}$ is decomposed in $\omega_{850}$ and $q_{850}$ space following \cite{TETAL2018CD}. Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution. To simplify the analysis, the decomposition is restricted to stratiform precipitation rates and moisture fluxes in the $\pm 15^{\circ}$ latitude region, and $\overline{P_s}$ is redefined as the average over $\pm 15^{\circ}$ latitude. $\overline{P_s}$ can then be expressed as the double sum of the product of the time mean magnitude $M_s$ and time mean spatial frequency $f_s$, over $\omega_{850}$ and $q_{850}$ space,
+To unravel the contributions of changes in $\omega$ and $q$ at the 850 hPa level $\omega_{850}$ and $q_{850}$, to the increase in global mean, climatological stratiform precipitation rates $\overline{P_s}$, $\overline{P_s}$ is decomposed in $\omega_{850}$ and $q_{850}$ space following \cite{TETAL2018CD}. Table~\ref{tbl:table2} indicates that the $\pm 15^{\circ}$ latitude band accounts for most of the change in global mean stratiform precipitation with resolution. The decomposition is then restricted to stratiform precipitation rates and moisture fluxes in the $\pm 15^{\circ}$ latitude region to simplify the analysis, and $\overline{P_s}$ is redefined as the average over $\pm 15^{\circ}$ latitude. $\overline{P_s}$ can be expressed as the double sum of the product of the time mean magnitude $M_s$ and time mean spatial frequency $f_s$, over $\omega_{850}$ and $q_{850}$ space,
 \begin{equation}
 \overline{P_{s}} = \sum_i \sum_j f_s \left( \omega_i , q_j \right) M_s \left( \omega_i , q_j \right) \label{eq:pdecomp}
 \end{equation}
 where the subscript $850$ is dropped from $\omega$ and $q$ for brevity. $f_s$ is a measure of the occurrence of a particular combination $\left( \omega_i , q_j \right)$ in a simulation, and $M_s$ the mean stratiform precipitation rate associated with the combination $\left( \omega_i , q_j \right)$. Their product $f_s M_s$ is then the contribution of a particular combination of $\left( \omega_i , q_j \right)$ to $\overline{P_s}$.
 
-Figure~\ref{fig:pdecomp} shows plots of the terms $M_s$ and $f_s M_s$ for all resolutions. The plots are computed using 6-hourly instantaneous output of $\omega_{850}$ and $q_{850}$, with 0.05 Pa/s and 0.4 g/kg bin wdiths, respectively. Bins in  $\left( \omega_{i} , q_{j} \right)$ space with $f_s <1 \times 10^{-5}$ are masked out, which is a somewhat arbitrary, but still reasonable cut-off to a bins' contribution to $\overline{P_s}$. The $M_s$ plots (left column) show that larger magnitude $\omega_{850}$ correspond to larger magnitude stratiform precipitation rates, while the impact of changing $q_{850}$ is less clear. The changes in $M_s$ with resolution are subtle, while the changes in $f_s$ with resolution are large (not shown). The changes to $f_s$ can be inferred from the larger space of $\left( \omega_i , q_j \right)$ plotted at higher resolutions, indicating that larger magnitude $\omega_{850}$ values are occurring more frequently at higher resolutions, above the cutoff for plotting ($f_s \geq1 \times 10^{-5}$). The $f_s M_s$ plots (right column) clearly shows that larger magnitude $\omega_{850}$, and therefore larger magnitude stratiform precipitation rates are contributing to the increase in $\overline{P_s}$ with resolution. In contrast, smaller magnitude $\omega_{850}$ and hence smaller stratiform precipitation rates contribute less to $\overline{P_s}$ at higher resolutions.
+Figure~\ref{fig:pdecomp} shows plots of the terms $M_s$ and $f_s M_s$ for all resolutions. The plots are computed using 6-hourly instantaneous output of $\omega_{850}$ and $q_{850}$, with 0.05 Pa/s and 0.4 g/kg bin wdiths, respectively. Bins in  $\left( \omega_{i} , q_{j} \right)$ space with $f_s <1 \times 10^{-5}$ are masked out, which is a somewhat arbitrary, but still reasonable cut-off to a bins' contribution to $\overline{P_s}$. The $M_s$ plots (left column) show that larger magnitude $\omega_{850}$ correspond to larger magnitude stratiform precipitation rates, while the impact of changing $q_{850}$ on $M_s$ is less clear. The changes in $M_s$ with resolution are subtle, while the changes in $f_s$ with resolution are large (not shown). The changes to $f_s$ can be inferred from the larger space of $\left( \omega_i , q_j \right)$ plotted at higher resolutions, indicating that larger magnitude $\omega_{850}$ values are occurring more frequently at higher resolutions, above the cutoff for plotting ($f_s < 1 \times 10^{-5}$). The $f_s M_s$ plots (right column) clearly shows that larger magnitude $\omega_{850}$, and therefore larger magnitude stratiform precipitation rates are contributing to the increase in $\overline{P_s}$ with resolution. In contrast, smaller magnitude $\omega_{850}$ and hence smaller stratiform precipitation rates contribute less to $\overline{P_s}$ at higher resolutions.
 
 \begin{figure}
 \begin{center}
