--- a/bib.bib
+++ b/bib.bib
@@ -9015,3 +9015,11 @@ the Simulated Greenland Surface Mass Balance},
   pages={1538--1558},
   year={1996}
 }
+
+@article{XETAL2019JAMES,
+  title={Improved Diurnal Cycle of Precipitation in E3SM with a Revised Convective Triggering Function},
+  author={Xie, Shaocheng and Wang, Yi-Chi and Lin, Wuyin and Ma, Hsi-Yen and Tang, Qi and Tang, Shuaiqi and Zheng, Xue and Golaz, Jean-Christophe and Zhang, Guang J and Zhang, Minghua},
+  journal={Journal of Advances in Modeling Earth Systems},
+  year={2019},
+  publisher={Wiley Online Library}
+}
