--- a/resolution.tex
+++ b/resolution.tex
@@ -289,15 +289,23 @@ Figure~\ref{fig:pdecomp} shows plots of the terms $M_s$ and $f_s M_s$ for all re
 
 \section{Conclusions}
 
-This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since its inception some 30 years ago. Establishing a complete understanding of resolution sensitivity in CAM and AGCMs alike is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of scale-aware physics. As with most versions within the CAM lineage (see Figure~\ref{fig:cam-history}), the atmosphere becomes drier and less cloudy with increasing resolution, and convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness is a result of increases in magnitude of vertical velocities with resolution, which more efficiently advect dry air downward \citep{KW1991JGR,WETAL1995CD,YETAL2014JCLIM,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why the convection precipitation decreases at the expense of stratiform precipitation with increasing resolution.
+This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since the models' inception (see Figure~\ref{fig:cam-history}). Establishing a complete understanding of resolution sensitivity in CAM and AGCMs alike is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of scale-aware physics. As with most versions of CAM, in the CAM6 convergence experiment the atmosphere becomes drier and less cloudy with increasing resolution, and convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advect dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,YETAL2014JCLIM,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why the convection precipitation decreases at the expense of stratiform precipitation with increasing resolution.
 
-The vertical velocities were found to fit a power law scaling $\Delta x^n$ with $n=-1$. The scaling is derived from a scale analysis of the Poisson equation in which the pressure gradients scale like the inverse of the horizontal scale of buoyancy perturbations, facilitating convergence into an air column and driving vertical motion. The horizontal scale of buoyancy perturbations in CAM have been previously shown to result from stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, known as the effective resolution \citep{S2011LNCSE}. The horizontal scale of stratiform clouds is then proportional to $\Delta x$, which results in the $n=-1$ power law exponent. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
+The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The power law exponent $n=-1$ is derived from a scale analysis of the Poisson equation, indicating that the pressure gradients scale like the inverse of the horizontal scale of buoyancy perturbations, facilitating convergence into an air column and driving vertical motion. The horizontal scale of buoyancy perturbations in CAM have been previously shown to result from stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, known as the effective resolution \citep{S2011LNCSE}. The horizontal scale of stratiform clouds is then proportional to $\Delta x$, which results in the $n=-1$ power law exponent. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
 
-The $n=-1$ power law scaling is potentially in conflict with the scaling proposed in \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} provide evidence for $h<1$ in their regional climate model simulations, but propose that $h=\frac{1}{3}$ is an emergent constraint for $n=-\frac{2}{3}$, based on observations and models. This is intriguing proposal and the authors don't dismiss it's potential value. But rather, it is proposed that the overwhelming support for the $h=\frac{1}{3}$ exponent in second-order structure function is only relevant for horizontal scales on the order of $100$ km and less, which is only marginally resolved in even our highest resolution simulation, with an average equatorial grid spacing of $\Delta x=27.8$ km. But it is the effective resolution that determines the resolvable scales of motion, which is in the range of $5-10\Delta x$ in CAM-SE-CSLAM \citep{HETAL2019JAMES}. 
+The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} provide evidence for $h<1$ in their regional climate model simulations, but propose that $h=\frac{1}{3}$ is an emergent constraint for $n=-\frac{2}{3}$, based on observations. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is not resolved in even our highest resolution simulation $\Delta x=27.8$ km since that CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=-\frac{5}{3}$, which is not observed in the simulation {\color{red}{(Figure~X)}}.
 
-The Weiner–Khinchine theorem provides a duality between the second-order structure function and the slope of kinetic energy spectrum $-\beta$, in which $h=\frac{1}{3}$ gives $\beta=\frac{5}{3}$, which has robust support from observations and models at the mesoscale. The simulations used in this paper are too coarse to resolve the $\beta=\frac{5}{3}$ slope, and has only been observed in the CAM model with $\Delta x=13.9$ km. In this study, $\beta=3$ near the effective resolution of the model, and while tempting to apply the Weiner–Khinchine theorem to derive a value for $h$, it is only valid in the range $1<\beta<3$; $\beta=3$ violates stationarity \citep{DETAL1996JAS}. One could however, compute the second-order structure function in the simulations directly to estimate a value for $h$ in the simulations, but this is beyond the scope of the current study. 
+A curious, strong negative correlation is discovered between the climatological, global mean activity of the \cite{ZM1995AO} deep convection scheme (ZM scheme) and global mean subsiding motion in the simulations. Since the ZM scheme is modulated by an entraining plume calculation, referred to as the dilute convective available potential energy (dilute CAPE), the authors sought to understand the influence of subsidence on dilute CAPE. In the deep tropics ($\pm 10^{\circ}$ latitude), subsiding regions have much smaller dilute CAPE values compared with ascending regions due to the influence of the drier, subsiding environment on dilute CAPE, and subsidence is a good predictor of the activity of the ZM scheme within in the simulations. With increasing resolution and in the deep tropics, the occurrence of subsiding motion increases dramatically and at the expense of ascending motion, and the activity of the the ZM scheme decreases overall. This is not completely unexpected since e.g., for a doubling of the resolution, and the power-law $\Delta x^{-1}$ scaling of the vertical velocities, one can simulate the same mass fluxes in half the area. The increased efficiency of upward mass fluxes with resolution suggests that the occurrence of ascending motion may decrease with resolution, while still maintaining a statistical equilibrium with the large-scale forcing.
 
-%In the $\pm 10^{\circ}$ latitude band, the deep tropics, there is a reduction in the occurrence of ascending grid columns with resolution, which drives an increase in occurrence of subsiding regions. The reduction in occurrence of ascending motion in the deep tropics with resolution likely manifests as a reduction in the area of resolved updrafts with resolution, since the horizontal scale of large buoyancy stratiform clouds collapse to smallest resolvable feature in the model \citep{HR2018JAMES}, i.e., the models effective resolution. The PDF's of vertical velocities indicate that it is this resolution dependence of stratiform clouds that sets a power law relationship of the magnitude of the vertical velocities with resolution $\Delta x^{n}$, with $n=-1$. This scaling also indicates that for a doubling of the resolution, the same upward mass flux can be achieved in the half the area, and so it seems plausible that the reduction in the occurrence of ascending motion with resolution is also a result of the greater efficiency of the resolved mass fluxes with resolution.
+In addition to the change in balance of ascending/descending motion in the deep tropics, there is also a decrease in dilute CAPE of both ascending/descending regimes with increasing resolution. A sensitivity analysis of the dilute CAPE calculation has verified that this change in the background stability of the deep tropics is a result temperature changes with resolution. A similar change in background stability of the environment occurs everywhere else in the simulations, equator-to-pole. 
+
+The relationship between subsidence and temperature falls out of the CAPE equation, which is closely related to dilute CAPE. The CAPE budget can be separated into two components \citep{Z2002JGR}; instability due to the thermodynamic state of parcels in the boundary layer and the instability generated through radiative cooling and advection of dry static energy and moisture by the environment, i.e., the resolved flow. The latter term is defined as, 
+\begin{equation}
+-R_d \int_{p_t}^{p_b} \frac{\partial T_{ve}}{\partial t} dlnp \label{eq:cape}
+\end{equation}
+where $T_{ve}$ is the virtual temperature of the environment, $R_d$ the gas constant for dry air and subscripts $b$ and $t$ refer to the parcel launch level (typically in the boundary layer) and the level of neutral buoyancy, respectively \citep{Z2002JGR}. Equation~\ref{eq:cape} shows that warming the environment reduces CAPE though reducing the buoyancy of lifted air parcels. The $T_{ve}$ budget contains a term; the vertical advection of potential energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air. In subsiding regions, $w$ is negative and opposes the generation of CAPE through adiabatic warming of the environment.
+
+Unlike the deep tropics, dilute CAPE in the subtropics ($\pm (10^{\circ}-10^{\circ})$ latitude) is less dependent on subsiding motion, and a poor predictor of the activity of the ZM scheme in general. This is likely due to the $\pm (10^{\circ}-10^{\circ})$ latitude region coinciding with a global maximum in surface latent heat fluxes, which increases dilute CAPE above the threshold for convection, and despite descending motion aloft opposing the growth of dilute CAPE. These opposing influences results in quite small values of dilute CAPE, with ZM scheme acting more like a shallow convection scheme, and producing copious amounts of drizzle. \cite{XETAL2019JAMES} recently proposed a new convective trigger the ZM scheme that avoids this excess drizzle in the model.
 
 \ack 
 Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629 and AGS1830729). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study.
