--- a/resolution.tex
+++ b/resolution.tex
@@ -289,23 +289,21 @@ Figure~\ref{fig:pdecomp} shows plots of the terms $M_s$ and $f_s M_s$ for all re
 
 \section{Conclusions}
 
-This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since the models' inception (see Figure~\ref{fig:cam-history}). Establishing a complete understanding of resolution sensitivity in CAM and AGCMs alike is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of scale-aware physics. As with most versions of CAM, in the CAM6 convergence experiment the atmosphere becomes drier and less cloudy with increasing resolution, and convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advect dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,YETAL2014JCLIM,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why the convection precipitation decreases at the expense of stratiform precipitation with increasing resolution.
+Establishing a complete understanding of resolution sensitivity in atmospheric general circulation models (AGCMs) is crucial, since inevitable responses to native grid resolution cannot be ignored in the pursuit of scale-aware physics. This study analyzes a convergence experiment in an aqua-planet configuration using the Community Atmosphere Model (CAM), with the spectral-element dynamical core option coupled to the accelerated multi-tracer transport scheme (CAM-SE-CSLAM), and version 6 physics (CAM6), in order to understand longstanding convergence issues that have persisted within the CAM lineage since its inception (see Figure~\ref{fig:cam-history}). As with most versions of CAM, in the CAM6 the atmosphere becomes drier and less cloudy with increasing resolution, and parameterized convective precipitation decreases while stratiform precipitation increases with resolution. Prior studies have established that the drying and reduction in cloudiness is a result of increases in the magnitude of vertical velocities with resolution, which more efficiently advect dry air aloft, downward \citep{KW1991JGR,WETAL1995CD,YETAL2014JCLIM,HR2017JCLIM}. This study aims to then understand why and how vertical velocities change with resolution, and why the convectiive precipitation decreases at the expense of stratiform precipitation with increasing resolution.
 
-The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The power law exponent $n=-1$ is derived from a scale analysis of the Poisson equation, indicating that the pressure gradients scale like the inverse of the horizontal scale of buoyancy perturbations, facilitating convergence into an air column and driving vertical motion. The horizontal scale of buoyancy perturbations in CAM have been previously shown to result from stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, known as the effective resolution \citep{S2011LNCSE}. The horizontal scale of stratiform clouds is then proportional to $\Delta x$, which results in the $n=-1$ power law exponent. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
+The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ power law exponent is derived from a scale analysis of the Poisson equation, which shows pressure gradients scale like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, facilitating convergence into the air column and the resulting vertical velocities also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ and $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
 
-The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} provide evidence for $h<1$ in their regional climate model simulations, but propose that $h=\frac{1}{3}$ is an emergent constraint for $n=-\frac{2}{3}$, based on observations. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is not resolved in even our highest resolution simulation $\Delta x=27.8$ km since that CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=-\frac{5}{3}$, which is not observed in the simulation {\color{red}{(Figure~X)}}.
+The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} provide evidence for $h<1$ in their regional climate model simulations, but propose that $h=\frac{1}{3}$ is an emergent constraint for $n=-\frac{2}{3}$, based on observations. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is not resolved in even our highest resolution simulation $\Delta x=27.8$ km since CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=-\frac{5}{3}$, which is not observed in the simulation {\color{red}{(Figure~X)}}.
 
-A curious, strong negative correlation is discovered between the climatological, global mean activity of the \cite{ZM1995AO} deep convection scheme (ZM scheme) and global mean subsiding motion in the simulations. Since the ZM scheme is modulated by an entraining plume calculation, referred to as the dilute convective available potential energy (dilute CAPE), the authors sought to understand the influence of subsidence on dilute CAPE. In the deep tropics ($\pm 10^{\circ}$ latitude), subsiding regions have much smaller dilute CAPE values compared with ascending regions due to the influence of the drier, subsiding environment on dilute CAPE, and subsidence is a good predictor of the activity of the ZM scheme within in the simulations. With increasing resolution and in the deep tropics, the occurrence of subsiding motion increases dramatically and at the expense of ascending motion, and the activity of the the ZM scheme decreases overall. This is not completely unexpected since e.g., for a doubling of the resolution, and the power-law $\Delta x^{-1}$ scaling of the vertical velocities, one can simulate the same mass fluxes in half the area. The increased efficiency of upward mass fluxes with resolution suggests that the occurrence of ascending motion may decrease with resolution, while still maintaining a statistical equilibrium with the large-scale forcing.
+A curious, strong negative correlation is discovered between the climatological, global mean activity of the \cite{ZM1995AO} deep convection scheme (ZM scheme) and global mean subsiding motion in the simulations. Since the ZM scheme is modulated by an entraining plume calculation, referred to as the dilute convective available potential energy (dilute CAPE), the authors sought to understand the influence of subsidence on dilute CAPE. In the deep tropics ($\pm 10^{\circ}$ latitude), subsiding regions have much smaller dilute CAPE values compared to ascending regions due to the influence of the drier, subsiding environment on dilute CAPE, and subsidence is a good predictor of the activity of the ZM scheme within the simulations. With increasing resolution and in the deep tropics, the occurrence of subsiding motion increases dramatically and at the expense of ascending motion, and the activity of the the ZM scheme decreases overall. This is not completely unexpected due to the $\Delta x^{-1}$ scaling of the vertical velocities, e.g., a doubling of resolution can generate the same mass flux in just half the area. The increased efficiency of upward mass fluxes with resolution suggests that the occurrence of ascending motion may decrease with resolution, while still maintaining statistical equilibrium with the large-scale forcing.
 
-In addition to the change in balance of ascending/descending motion in the deep tropics, there is also a decrease in dilute CAPE of both ascending/descending regimes with increasing resolution. A sensitivity analysis of the dilute CAPE calculation has verified that this change in the background stability of the deep tropics is a result temperature changes with resolution. A similar change in background stability of the environment occurs everywhere else in the simulations, equator-to-pole. 
+{\color{red}{EVERYTHING BELOW HERE NEEDS SOME WORK}}
 
-The relationship between subsidence and temperature falls out of the CAPE equation, which is closely related to dilute CAPE. The CAPE budget can be separated into two components \citep{Z2002JGR}; instability due to the thermodynamic state of parcels in the boundary layer and the instability generated through radiative cooling and advection of dry static energy and moisture by the environment, i.e., the resolved flow. The latter term is defined as, 
-\begin{equation}
--R_d \int_{p_t}^{p_b} \frac{\partial T_{ve}}{\partial t} dlnp \label{eq:cape}
-\end{equation}
-where $T_{ve}$ is the virtual temperature of the environment, $R_d$ the gas constant for dry air and subscripts $b$ and $t$ refer to the parcel launch level (typically in the boundary layer) and the level of neutral buoyancy, respectively \citep{Z2002JGR}. Equation~\ref{eq:cape} shows that warming the environment reduces CAPE though reducing the buoyancy of lifted air parcels. The $T_{ve}$ budget contains a term; the vertical advection of potential energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air. In subsiding regions, $w$ is negative and opposes the generation of CAPE through adiabatic warming of the environment.
+In addition to the change in balance of ascending/descending motion in the deep tropics, there is also a decrease in dilute CAPE of both ascending/descending regimes with increasing resolution. A sensitivity analysis of the dilute CAPE calculation has verified that this change in the background stability of the deep tropics is a result of temperature changes with resolution. A similar change in background stability of the environment occurs everywhere else in the simulations, equator-to-pole, and reduces the activity of the ZM scheme globally. The increased stability is a result of adiabatic warming due to increasing subsidence with resolution. Subsidence warming falls out of the component of the dilute CAPE budget due to the advection of dry static energy and moisture by the environment, referred to as dCAPE \citep{Z2002JGR}. Subsidence warming arises from the vertical advection of dry static energy which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air (F. Song, personal communication). The magnitude of downward $w$ increases everywhere in the model with increasing resolution, reducing dilute CAPE everywhere in the model with increasing resolution.
 
-Unlike the deep tropics, dilute CAPE in the subtropics ($\pm (10^{\circ}-10^{\circ})$ latitude) is less dependent on subsiding motion, and a poor predictor of the activity of the ZM scheme in general. This is likely due to the $\pm (10^{\circ}-10^{\circ})$ latitude region coinciding with a global maximum in surface latent heat fluxes, which increases dilute CAPE above the threshold for convection, and despite descending motion aloft opposing the growth of dilute CAPE. These opposing influences results in quite small values of dilute CAPE, with ZM scheme acting more like a shallow convection scheme, and producing copious amounts of drizzle. \cite{XETAL2019JAMES} recently proposed a new convective trigger the ZM scheme that avoids this excess drizzle in the model.
+The subtropics ($\pm (10^{\circ}-10^{\circ})$ latitude) are uniquely less sensitive to subsiding motion, and a poor predictor of the activity of the ZM scheme in general. This is likely due to the $\pm (10^{\circ}-10^{\circ})$ latitude region coinciding with a global maximum in surface latent heat fluxes, which increases dilute CAPE above the threshold for convection, despite appreciable subsiding motion aloft opposing the growth of dilute CAPE. These opposing influences result in small values of dilute CAPE, and the ZM scheme acts more like a shallow convection scheme, producing copious amounts of drizzle. AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme containing an additional criterion for convection, that dCAPE must be positive. Based on the analysis in this study, it is reasonable to assume that dCAPE would be negative in drizzling regions and convection would not occur. The authors suggest that the \cite{XETAL2019JAMES} be explored as a means to mitigate the drizzling bias in CAM.
+
+The Intertropical Convergence Zone (ITCZ) changes with increasing resolution, with proportionally more precipitation generated by the the stratiform scheme relative to the ZM scheme. Energetically, one might assume that stratiform precipitation rates are increasing with resolution to compensate for the reduction in ZM precipitation rates to satisfy globally average radiative-convective equilibrium. But from a process point of view, it is shown that resolved upward moisture fluxes are highly correlated with stratiform precipitation rates, and that there is an increase in both upward moisture fluxes and stratiform precipitation with resolution. Through decomposing the stratiform precipitation in the ITCZ region into the components of the moisture flux, it is shown that larger magnitude vertical velocities are associated with larger stratiform precipitation rates, and these large precipitation rates increasingly contribute to the increase in the time mean stratiform precipitation rate with resolution.
 
 \ack 
 Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629 and AGS1830729). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study.
