--- a/bib.bib
+++ b/bib.bib
@@ -9023,3 +9023,14 @@ the Simulated Greenland Surface Mass Balance},
   year={2019},
   publisher={Wiley Online Library}
 }
+
+@article{XZ2000JGR,
+  title={Impact of the convection triggering function on single-column model simulations},
+  author={Xie, Shaocheng and Zhang, Minghua},
+  journal={Journal of Geophysical Research: Atmospheres},
+  volume={105},
+  number={D11},
+  pages={14983--14996},
+  year={2000},
+  publisher={Wiley Online Library}
+}
