--- a/resolution.tex
+++ b/resolution.tex
@@ -293,11 +293,11 @@ Establishing a complete understanding of resolution sensitivity in atmospheric g
 
 The vertical velocities are found to fit a power law scaling $\Delta x^n$ with $\Delta x$ the grid spacing and $n=-1$. The $n=-1$ exponent is derived from a scale analysis of the Poisson equation, which shows pressure gradients scale like the inverse of the horizontal scale of buoyancy perturbations, $D^{-1}$, driving convergence into the air column and the vertical velocities also scale like $D^{-1}$. It has been previously shown that $D$ is set by stratiform cloud formation, which collapse to the smallest resolvable feature in the model \citep{HR2018JAMES}, the effective resolution \citep{S2011LNCSE}, and so $D \propto \Delta x$ and $n=-1$. This scaling is consistent with studies describing the resolution sensitivity of large-eddy simulations, which use similar physical arguments, but adapted for non-hydrostatic scales \citep{WETAL1997MWR,PG2006JAS,JR2016QJRMS}.
 
-The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} provide evidence for $h<1$ in their regional climate model simulations, but propose that $h=\frac{1}{3}$ is an emergent constraint for $n=-\frac{2}{3}$, based on observations. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is not resolved in even our highest resolution simulation $\Delta x=27.8$ km, since CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is significantly less than the $\beta=3$ slope observed in the simulation {\color{red}{(Figure~X)}}.
+The $n=-1$ power law scaling is potentially in conflict with the scaling proposed by \cite{RETAL2016CD}, $n=h-1$, with $h$ being half the exponent of the second-order structure function $\Delta x^{2h}$ of the horizontal wind. \cite{RETAL2016CD} provide evidence for $h<1$ in their regional climate model simulations, and propose that $h=\frac{1}{3}$ is an emergent constraint for $n=-\frac{2}{3}$, based on observations. This is an intriguing proposal and the authors don't seek to dismiss its potential value. But it is suggested that the overwhelming support for the $h=\frac{1}{3}$ exponent in the second-order structure function is only relevant for horizontal scales on the order of $100$ km and less \citep{L1999JFM,CL2001JGR}, which is not resolved in even our highest resolution simulation $\Delta x=27.8$ km, since CAM-SE-CSLAM has an effective resolution in the range of $5-10\Delta x$ \citep{HETAL2019JAMES}. The nonexistence of $h=\frac{1}{3}$ in the $\Delta x=27.8$ km simulation is verified through analyzing the slope of kinetic energy spectrum $-\beta$, which is in duality with the second-order structure function through the Weiner–Khinchine theorem. For $h=\frac{1}{3}$, $\beta=\frac{5}{3}$, which is significantly less than the $\beta=3$ slope observed near the effective resolution in the simulation {\color{red}{(Figure~X)}}.
 
-A strong negative correlation is discovered between the climatological, global mean activity of the \cite{ZM1995AO} deep convection scheme (ZM scheme) and global mean subsiding motion in the simulations. Since the ZM scheme is modulated by an entraining plume calculation, referred to as the dilute convective available potential energy (dilute CAPE), the authors sought to understand the influence of subsidence on dilute CAPE. In the deep tropics ($\pm 10^{\circ}$ latitude), subsiding regions have much smaller dilute CAPE values compared to ascending regions due to the influence of the drier, subsiding environment on dilute CAPE, and subsidence is a good predictor of the activity of the ZM scheme within the simulations. With increasing resolution and in the deep tropics, the occurrence of subsiding motion increases dramatically and at the expense of ascending motion, and the activity of the the ZM scheme decreases overall. This is not completely unexpected due to the $\Delta x^{-1}$ scaling of the vertical velocities, e.g., a doubling of resolution can generate the same upward mass flux in just half the area. The increased efficiency of upward mass fluxes with resolution suggests that the occurrence of ascending motion can decrease with resolution while still maintaining statistical equilibrium with the large-scale forcing.
+A strong negative correlation is discovered between the climatological, global mean activity of the \cite{ZM1995AO} deep convection scheme (ZM scheme) and global mean subsiding motion in the simulations. Since the ZM scheme is modulated by an entraining plume calculation, referred to as the dilute convective available potential energy (dilute CAPE), the authors sought to understand the influence of subsidence on dilute CAPE. In the deep tropics ($\pm 10^{\circ}$ latitude), subsiding regions have much smaller dilute CAPE values compared to ascending regions due to the influence of the drier, subsiding environment on dilute CAPE. With increasing resolution and in the deep tropics, the occurrence of subsiding motion increases dramatically and at the expense of ascending motion, and the activity of the the ZM scheme decreases overall. This is not completely unexpected due to the $\Delta x^{-1}$ scaling of the vertical velocities, e.g., a doubling of resolution can generate the same upward mass flux in just half the area. The increased efficiency of upward mass fluxes with resolution suggests that the occurrence of ascending motion can decrease with resolution while still maintaining statistical equilibrium with the large-scale forcing.
 
-In addition to the change in balance of ascending/descending motion in the deep tropics, there is also a decrease in dilute CAPE of both ascending/descending regimes with increasing resolution. This reduction in background dilute CAPE is not confined to the deep tropics, but everywhere in the model and is in large part the reason for the global mean reduction in the activity in the ZM scheme with resolution. A sensitivity analysis of the dilute CAPE calculation has verified that this change in background stability is primarily a result of temperature changes with resolution. The temperature changes reflect an increase in adiabatic warming from increasing subsidence with resolution. Subsidence warming falls out of the component of the dilute CAPE budget due to the advection of dry static energy and moisture by the environment, commonly referred to as dynamic CAPE, or {\em{dCAPE}} \citep{Z2002JGR}. Subsidence warming is represented in dCAPE as the vertical advection of dry static energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air (F. Song, personal communication). The magnitude of downward $w$ increases everywhere in the model with increasing resolution, reducing dilute CAPE and the activity of the ZM scheme everywhere in the model with increasing resolution
+In addition to the change in balance of ascending/descending motion in the deep tropics, there is also a decrease in dilute CAPE of both ascending/descending regimes with increasing resolution. This reduction in background dilute CAPE is not confined to the deep tropics, but everywhere in the model and is in large part the reason for the global mean reduction in the activity in the ZM scheme with resolution. A sensitivity analysis of the dilute CAPE calculation has verified that this change in background stability is primarily a result of temperature changes with resolution. The temperature changes reflect an increase in adiabatic warming due to increasing subsidence with resolution. Subsidence warming falls out of the component of the dilute CAPE budget due to the advection of dry static energy and moisture by the environment, commonly referred to as dynamic CAPE, or {\em{dCAPE}} \citep{XZ2000JGR,Z2002JGR}. Subsidence warming is represented in dCAPE as the vertical advection of dry static energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air (F. Song, personal communication). The magnitude of downward $w$ increases everywhere in the model with increasing resolution, reducing dilute CAPE and the activity of the ZM scheme everywhere in the model with increasing resolution
 
 The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensitive to subsiding motion. This is likely due to the the large, global maximum in surface latent heat fluxes in the subtropics, which increases dilute CAPE above the threshold for convection, despite appreciable subsiding motion aloft that opposes the growth of dilute CAPE. These opposing influences ho however result in small values of dilute CAPE, and the ZM scheme acts more like a shallow convection scheme, producing copious amounts of light precipitation or drizzle, irrespective of resolution. AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors believe may alleviate the excess drizzle bias in CAM. In additional to standard requirement that dilute CAPE exceed a threshold, \cite{XETAL2019JAMES} also requires dCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and dCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that dCAPE is often negative in drizzling regions. The authors suggest that the \cite{XETAL2019JAMES} trigger be explored as a means to mitigate the drizzling bias in CAM.
 
