--- a/resolution.tex
+++ b/resolution.tex
@@ -299,11 +299,11 @@ A strong negative correlation is discovered between the climatological, global m
 
 In addition to the change in balance of ascending/descending motion in the deep tropics, there is also a decrease in dilute CAPE of both ascending/descending regimes with increasing resolution. This reduction in background dilute CAPE is not confined to the deep tropics, but everywhere in the model and is in large part the reason for the global mean reduction in the activity in the ZM scheme with resolution. A sensitivity analysis of the dilute CAPE calculation has verified that this change in background stability is primarily a result of temperature changes with resolution. The temperature changes reflect an increase in adiabatic warming due to increasing subsidence with resolution. Subsidence warming falls out of the component of the dilute CAPE budget due to the advection of dry static energy and moisture by the environment, commonly referred to as dynamic CAPE, or {\em{dCAPE}} \citep{XZ2000JGR,Z2002JGR}. Subsidence warming is represented in dCAPE as the vertical advection of dry static energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air (F. Song, personal communication). The magnitude of downward $w$ increases everywhere in the model with increasing resolution, reducing dilute CAPE and the activity of the ZM scheme everywhere in the model with increasing resolution
 
-The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensitive to subsiding motion. This is likely due to the the large, global maximum in surface latent heat fluxes in the subtropics, which increases dilute CAPE above the threshold for convection, despite appreciable subsiding motion aloft that opposes the growth of dilute CAPE. These opposing influences ho however result in small values of dilute CAPE, and the ZM scheme acts more like a shallow convection scheme, producing copious amounts of light precipitation or drizzle, irrespective of resolution. AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors believe may alleviate the excess drizzle bias in CAM. In additional to standard requirement that dilute CAPE exceed a threshold, \cite{XETAL2019JAMES} also requires dCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and dCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that dCAPE is often negative in drizzling regions. The authors suggest that the \cite{XETAL2019JAMES} trigger be explored as a means to mitigate the drizzling bias in CAM.
+The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensitive to subsiding motion. This is likely due to the the large, global maximum in surface latent heat fluxes in the subtropics, which increases dilute CAPE above the threshold for convection, but is restricted from growing too much larger due to substantial subsiding motion aloft. These opposing influences result in small values of dilute CAPE, and the ZM scheme acts more like a shallow convection scheme, producing copious amounts of light precipitation or drizzle, irrespective of resolution. AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors suggest may alleviate the excess drizzle bias in CAM. As with the ZM scheme used in this study that dilute CAPE exceed a threshold fro convection to ccur, \cite{XETAL2019JAMES} also requires dCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and dCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that dCAPE is often negative in drizzling regions. The authors suggest that the \cite{XETAL2019JAMES} trigger be explored as a means to mitigate the drizzling bias in CAM.
 
-{\color{red}{EVERYTHING BELOW HERE NEEDS SOME WORK}}
+The stratiform scheme becomes more active with resolution, compensating for the reduction in activity of the ZM scheme with resolution, particularly as it relates to the Intertropical Convergence Zone (ITCZ). Energetically it might be expected that stratiform precipitation rates increase with resolution, compensating for the reduction in ZM precipitation rates to satisfy the global mean radiative convective equilibrium. But from a process point of view, it is shown that resolved upward moisture fluxes are highly correlated with stratiform precipitation rates, and that there is an increase in both upward moisture fluxes and stratiform precipitation with resolution. Through decomposing the stratiform precipitation in the ITCZ region into the components of the moisture flux, it is shown that larger magnitude vertical velocities are associated with larger stratiform precipitation rates, and these large precipitation rates increasingly contribute to the increase in climatological stratiform precipitation rate with resolution.
 
-The Intertropical Convergence Zone (ITCZ) changes with increasing resolution, with proportionally more precipitation generated by the the stratiform scheme relative to the ZM scheme. Energetically, one might assume that stratiform precipitation rates are increasing with resolution to compensate for the reduction in ZM precipitation rates to satisfy globally average radiative-convective equilibrium. But from a process point of view, it is shown that resolved upward moisture fluxes are highly correlated with stratiform precipitation rates, and that there is an increase in both upward moisture fluxes and stratiform precipitation with resolution. Through decomposing the stratiform precipitation in the ITCZ region into the components of the moisture flux, it is shown that larger magnitude vertical velocities are associated with larger stratiform precipitation rates, and these large precipitation rates increasingly contribute to the increase in the time mean stratiform precipitation rate with resolution.
+{\color{red}{Wrap up with a closing paragraph}}
 
 \ack 
 Funding support for this work was in part provided by the U.S. Department of Energy Office of Science (DE-SC0019459) and the National Science Foundation (AGS1648629 and AGS1830729). Computing and data storage resources, including the Cheyenne supercomputer (doi:10.5065/D6RX99HX), were provided by the Computational and Information Systems Laboratory (CISL) at the National Center for Atmospheric Research (NCAR). Herrington would like to thank Dr. Sultan Hameed for his assistance with the statistical analysis used in this study.
