--- a/resolution.tex
+++ b/resolution.tex
@@ -299,7 +299,7 @@ A strong negative correlation is discovered between the climatological, global m
 
 In addition to the change in balance of ascending/descending motion in the deep tropics, there is also a decrease in dilute CAPE of both ascending/descending regimes with increasing resolution. This reduction in background dilute CAPE is not confined to the deep tropics, but everywhere in the model and is in large part the reason for the global mean reduction in the activity in the ZM scheme with resolution. A sensitivity analysis of the dilute CAPE calculation has verified that this change in background stability is primarily a result of temperature changes with resolution. The temperature changes reflect an increase in adiabatic warming due to increasing subsidence with resolution. Subsidence warming falls out of the component of the dilute CAPE budget due to the advection of dry static energy and moisture by the environment, commonly referred to as dynamic CAPE, or {\em{dCAPE}} \citep{XZ2000JGR,Z2002JGR}. Subsidence warming is represented in dCAPE as the vertical advection of dry static energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air (F. Song, personal communication). The magnitude of downward $w$ increases everywhere in the model with increasing resolution, reducing dilute CAPE and the activity of the ZM scheme everywhere in the model with increasing resolution
 
-The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensitive to subsiding motion. This is likely due to the the large, global maximum in surface latent heat fluxes in the subtropics, which increases dilute CAPE above the threshold for convection, but is restricted from growing too much larger due to substantial subsiding motion aloft. These opposing influences result in small values of dilute CAPE, and the ZM scheme acts more like a shallow convection scheme, producing copious amounts of light precipitation or drizzle, irrespective of resolution. AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors suggest may alleviate the excess drizzle bias in CAM. As with the ZM scheme used in this study that dilute CAPE exceed a threshold fro convection to ccur, \cite{XETAL2019JAMES} also requires dCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and dCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that dCAPE is often negative in drizzling regions. The authors suggest that the \cite{XETAL2019JAMES} trigger be explored as a means to mitigate the drizzling bias in CAM.
+The subtropics ($\pm (10^{\circ}-30^{\circ})$ latitude) are uniquely less sensitive to subsiding motion. This is likely due to the the large, global maximum in surface latent heat fluxes in the subtropics, which increases dilute CAPE above the threshold for convection, but is restricted from growing too much larger due to substantial subsiding motion aloft. These opposing influences result in small values of dilute CAPE, and the ZM scheme acts more like a shallow convection scheme, producing copious amounts of light precipitation or drizzle, irrespective of resolution. AGCMs are known to suffer from an excess of drizzle relative to observations \citep{D2006JCLIM}. \cite{XETAL2019JAMES} recently proposed a new convective trigger for the ZM scheme that the authors suggest may alleviate the excess drizzle bias in CAM. As with the ZM scheme used in this study, dilute CAPE must exceed a threshold for convection to occur, but \cite{XETAL2019JAMES} also requires dCAPE to be positive. Based on the analysis in this study, and the strong connection between vertical velocities and dCAPE reported in \cite{SZ2018JCLIM}, it is reasonable to speculate that dCAPE is often negative in drizzling regions, which would prevent the ZM scheme from triggering. The authors suggest that the \cite{XETAL2019JAMES} trigger be explored as a means to mitigate the drizzling bias in CAM.
 
 {\color{red}{What follows needs serious work}}
 
